<resources>
    <string name="app_name">Siniia</string>
    <string name="home">Home</string>
    <string name="buy_sell">Buy&amp;Sell</string>
    <string name="products">Products</string>
    <string name="profile">Profile</string>
    <string name="more">More</string>
    <string name="login">LOGIN</string>
    <string name="mobile">Mobile</string>
    <string name="email">E-mail</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="get_otp">GET OTP</string>
    <string name="mobile_verification">MOBILE VERIFICATION</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="verify">VERIFY</string>
    <string name="are_you">ARE YOU?</string>
    <string name="farmer">Farmer</string>
    <string name="retailer">Retailer</string>
    <string name="buyer">Buyer</string>
    <string name="shipper">Shipper</string>
    <string name="next">Next</string>
    <string name="register">REGISTER</string>
    <string name="register_text">[Dear User, please ensure that your name, number and profile information is accurate so you can send and receive money for your goods and services].</string>
    <string name="payment">Payment</string>
    <string name="full_name">Full Name</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="dob">DOB</string>
    <string name="date_format">DD/MM/YYYY</string>
    <string name="pincode">Pincode</string>
    <string name="use_my_location">Use my location</string>
    <string name="landmark">Landmark</string>
    <string name="address1">Address1</string>
    <string name="address2">Address2</string>
    <string name="enter">Enter</string>
    <string name="congrts_text">Congratulations, your account has been successfully created</string>
    <string name="let_start">LET\'S START</string>
    <string name="buy">Buy</string>
    <string name="sell">Sell</string>
    <string name="my_posts">My Posts</string>
    <string name="quantity">Quantity</string>
    <string-array name="grade">
        <item>A+</item>
        <item>A</item>
    </string-array>
    <string name="price">Price</string>
    <string name="boxes">Boxes</string>
    <string name="bags">Bags</string>
    <string name="qty">Qty</string>
    <string name="all">All</string>
    <string name="grains">Grains</string>
    <string name="meat">Meat</string>
    <string name="legume">Legume</string>
    <string name="edit">Edit</string>
    <string name="terms_conditions">Terms &amp; Conditions</string>
    <string name="faq">FAQ</string>
    <string name="help_desk">Helpdesk</string>
    <string name="chat_on_web">Chat on web</string>
    <string name="news_letter">News Letter</string>
    <string name="logout">LOGOUT</string>
    <string name="post_a_product">POST A PRODUCT</string>
    <string name="category">Category</string>
    <string-array name="product_name">
        <item>Rice</item>
        <item>Mango</item>
        <item>Eggs</item>
        <item>Apple</item>

    </string-array>
    <string-array name="type">
        <item>Ponni</item>
        <item>Pusa</item>
        <item>Rajamudi</item>
        <item>Rajamudi</item>
    </string-array>
    <string-array name="units">
        <item>Kgs</item>
        <item>Baskets</item>
        <item>Boxes</item>
        <item>Dozens</item>
    </string-array>
    <string name="count">Count</string>
    <string name="minm_oty">Minm Qty</string>
    <string name="width">Width</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="radius">Radius</string>
    <string name="highlights">Highlights</string>
    <string name="product_description">Product Description</string>
    <string name="pickup_location">Pickup Location</string>
    <string name="land_mark">Land Mark</string>
    <string name="address">Address</string>
    <string name="contact">Contact</string>
    <string name="add_attachments">Add Attachments</string>
    <string name="post">Post</string>
    <string name="update_a_product">UPDATE A PRODUCT</string>
    <string name="please_enter_email">Please enter valid email</string>
    <string name="please_enter_mobile">Please enter valid mobile number</string>
    <string name="please_check_internet_connection">Please check internet connection</string>
    <string name="please_check_otp">Please enter valid OTP</string>
    <string name="prefs_mobile_number">mobile number</string>
    <string name="prefs_user_id">User Id</string>
    <string name="prefs_email">email</string>
    <string name="prefs_user_type">User Type</string>
    <string name="t_c_apply">T&amp;C Apply</string>
    <string name="rating_reviews">Rating &amp; Reviews</string>
    <string name="add_cart">Add to cart</string>
    <string name="buy_now">Buy Now</string>
    <string name="change">Change</string>
    <string name="place_order">Place Order</string>
    <string name="txt_continue">Continue</string>
    <string name="order_confirmed">Order Confirmed</string>
    <string name="sms_sent">Confirmation email and sms has been sent to your registered details</string>
    <string name="order_details">Order Details</string>
    <string name="go_to_buy_sell">Go to Buy &amp; Sell</string>
    <string name="preferred_shipping">Contact for Shipping</string>
    <string name="update">Update</string>
    <string-array name="category_type">
        <item>Fruits</item>
        <item>Vegetables</item>
        <item>Others</item>
    </string-array>
    <string name="avl_radius">Avl. Radius</string>
    <string name="minm_qty">Minm Qty</string>
    <string name="quantity_ava">Available quantity</string>
    <string name="price_per_unit">Price per unit</string>
    <string name="activated">Activated</string>
    <string name="de_activated">Deactivated</string>
    <string name="pay_pal">Pay pal</string>
    <string name="mobile_payment">Mobile Payment</string>
    <string name="select_delivery_address">Select Delivery Address</string>
    <string name="prefs_country_name">Country  Name</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="donate">Gift Giving</string>
    <string name="stall_14">Stall 14</string>
    <string name="submit">Submit</string>
    <string name="nes_letter_text">You have been added to our newsletter and you will now be among the first to hear about new arrivals, big events, special offers and gifting opportunities.</string>
    <string name="pref_paypal_id">Paypal Id</string>
    <string-array name="countries_name">
        <item>USA</item>
        <item>INDIA</item>
        <item>AFRICA</item>
    </string-array>
    <string name="donate_string">Upgrade\n
        Host\nStaff\nOutReach</string>
    <string name="fragment_stall_14">Stall 14</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="password">Password</string>
    <string name="conform_password">Conform Password</string>
</resources>