<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_home"
        android:enabled="true"
        android:icon="@drawable/ic_home_icon_animation"
        android:title="@string/home" />
    <item
        android:id="@+id/action_buy_sell"
        android:icon="@drawable/buy_sell_icons"
        android:title="@string/buy_sell" />
    <item
        android:id="@+id/action_products"
        android:icon="@drawable/products_icon_animation"
        android:title="@string/products" />

    <item
        android:id="@+id/action_profile"
        android:icon="@drawable/profile_icon_animation"
        android:title="@string/profile" />
    <item
        android:id="@+id/action_more"
        android:icon="@drawable/more_icon_animation"
        android:title="@string/more" />
</menu>