<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activites.RegisterActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gelion_regular"
                android:gravity="center"
                android:text="@string/register"
                android:textSize="@dimen/text_30">

            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/gelion_regular"
                android:gravity="center"
                android:text="@string/register_text"
                android:textSize="@dimen/text_14">

            </TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <Button
                    android:id="@+id/btn_profile"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_selected"
                    android:fontFamily="@font/gelion_regular"
                    android:text="@string/profile"
                    android:textAllCaps="false"
                    android:textColor="@color/white_color">

                </Button>

                <Button
                    android:id="@+id/btn_payment"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_unselected"
                    android:fontFamily="@font/gelion_regular"
                    android:text="@string/payment"
                    android:textAllCaps="false"></Button>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/gelion_regular"
                android:text="@string/full_name"
                android:textColor="@color/dark_black_color"
                android:textSize="@dimen/text_18"></TextView>

            <EditText
                android:inputType="textCapWords"
                android:id="@+id/edt_full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_style"
                android:fontFamily="@font/gelion_regular"
                android:hint="@string/enter"></EditText>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/gelion_regular"
                android:text="@string/gender"
                android:textColor="@color/dark_black_color"
                android:textSize="@dimen/text_18"></TextView>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/edittext_style"
                    android:drawableLeft="@drawable/ic_male_selected"
                    android:drawablePadding="10dp"
                    android:fontFamily="@font/gelion_regular"
                    android:gravity="center"
                    android:text="@string/male"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/text_18"></TextView>

                <TextView
                    android:id="@+id/txt_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/edittext_style"
                    android:drawableLeft="@drawable/ic_femal_unselected"
                    android:drawablePadding="10dp"
                    android:fontFamily="@font/gelion_regular"
                    android:gravity="center"
                    android:text="@string/female"
                    android:textColor="@color/dark_black_color"
                    android:textSize="@dimen/text_18"></TextView>


            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/dob"
                android:textColor="@color/dark_black_color"
                android:textSize="@dimen/text_18"></TextView>

            <TextView
                android:id="@+id/txt_date_of_birth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_style"
                android:drawableRight="@drawable/ic_calendar"
                android:drawablePadding="10dp"
                android:fontFamily="@font/gelion_regular"
                android:gravity="center|left"
                android:hint="@string/date_format"></TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/gelion_regular"
                android:text="@string/pincode"
                android:textColor="@color/dark_black_color"
                android:textSize="@dimen/text_18"></TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <EditText
                    android:id="@+id/edt_pincode"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@drawable/edittext_style"
                    android:hint="@string/enter"
                    android:textColor="@color/dark_black_color"
                    android:textSize="@dimen/text_18"></EditText>

                <TextView
                    android:id="@+id/txt_use_my_location"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@drawable/button_style_animation"
                    android:drawableLeft="@drawable/ic_location"
                    android:gravity="center"
                    android:paddingLeft="10dp"
                    android:text="@string/use_my_location"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_14"></TextView>


            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/landmark"
                android:textColor="@color/dark_black_color"
                android:textSize="@dimen/text_18"></TextView>

            <EditText
                android:inputType="textCapWords"
                android:id="@+id/edt_landmark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_style"
                android:fontFamily="@font/gelion_regular"
                android:hint="@string/enter"></EditText>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/gelion_regular"
                android:inputType="textCapWords"
                android:text="@string/city"
                android:textColor="@color/dark_black_color"
                android:textSize="@dimen/text_18"></TextView>

            <EditText
                android:id="@+id/edt_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_style"
                android:fontFamily="@font/gelion_regular"
                android:hint="@string/enter"
                android:inputType="textCapWords"></EditText>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/gelion_regular"
                android:inputType="textCapWords"
                android:text="@string/state"
                android:textColor="@color/dark_black_color"
                android:textSize="@dimen/text_18"></TextView>

            <EditText
                android:id="@+id/edt_state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_style"
                android:fontFamily="@font/gelion_regular"
                android:hint="@string/enter"
                android:inputType="textCapWords"></EditText>


            <TextView
                android:inputType="textCapWords"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/gelion_regular"
                android:text="@string/address1"
                android:textColor="@color/dark_black_color"
                android:textSize="@dimen/text_18"></TextView>

            <EditText
                android:inputType="textCapWords"
                android:id="@+id/edt_address1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_style"
                android:fontFamily="@font/gelion_regular"
                android:hint="@string/enter"></EditText>

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/gelion_regular"
                android:text="@string/address2"
                android:textColor="@color/dark_black_color"
                android:textSize="@dimen/text_18"></TextView>

            <EditText
                android:inputType="textCapWords"
                android:id="@+id/edt_address2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_style"
                android:fontFamily="@font/gelion_regular"
                android:hint="@string/enter"></EditText>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/gelion_regular"
                android:text="@string/email"
                android:textColor="@color/dark_black_color"
                android:textSize="@dimen/text_18"></TextView>

            <EditText
                android:inputType="textEmailAddress"
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_style"
                android:fontFamily="@font/gelion_regular"
                android:hint="@string/enter"></EditText>

            <TextView
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/gelion_regular"
                android:text="@string/password"
                android:textColor="@color/dark_black_color"
                android:textSize="@dimen/text_18"></TextView>

            <EditText
                android:inputType="text"
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_style"
                android:fontFamily="@font/gelion_regular"
                android:hint="@string/enter"></EditText>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/gelion_regular"
                android:text="@string/conform_password"
                android:textColor="@color/dark_black_color"
                android:textSize="@dimen/text_18"></TextView>

            <EditText
                android:inputType="text"
                android:id="@+id/edt_conform_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_style"
                android:fontFamily="@font/gelion_regular"
                android:hint="@string/enter"></EditText>

            <RelativeLayout
                android:id="@+id/mobile_login_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true">

                <TextView
                    android:id="@+id/txt_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/gelion_regular"
                    android:text="@string/mobile_number"
                    android:textColor="@color/dark_black_color"
                    android:textSize="@dimen/text_18" />

                <LinearLayout
                    android:id="@+id/linear_layout_country"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txt_phone"
                    android:orientation="horizontal">

                    <com.hbb20.CountryCodePicker
                        android:id="@+id/ccp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@drawable/edittext_style"
                        android:gravity="center"
                        app:ccp_autoDetectCountry="true"
                        app:ccp_showFlag="false"
                        app:ccp_showNameCode="false" />

                    <EditText
                        android:id="@+id/edt_phone_number"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_below="@+id/txt_phone"
                        android:layout_gravity="center"
                        android:background="@drawable/edittext_style"
                        android:inputType="phone" />

                </LinearLayout>


            </RelativeLayout>


            <Button
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/button_style_animation"
                android:fontFamily="@font/gelion_regular"
                android:text="@string/register"
                android:textColor="@android:color/white" />


        </LinearLayout>

    </RelativeLayout>
</ScrollView>